// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Logo - Snapshots > matches snapshot for Logo with custom className 1`] = `
<a
  class="cursor-pointer hover:text-brand/80 transition-colors text-brand text-sm flex items-center min-h-[36px] min-w-[184px] custom-logo-style"
  data-cy="header-logo"
  href="/home"
>
  <img
    alt="Pubky Arena"
    class="-mt-1 h-[36px] w-[184px]"
    data-testid="logo-image"
    height="36"
    src="/pubky-arena-logo.svg"
    width="184"
  />
</a>
`;

exports[`Logo - Snapshots > matches snapshot for Logo with custom dimensions 1`] = `
<a
  class="cursor-pointer hover:text-brand/80 transition-colors text-brand text-sm flex items-center"
  data-cy="header-logo"
  href="/home"
  style="min-width: 200px; min-height: 80px;"
>
  <img
    alt="Pubky Arena"
    class="-mt-1"
    data-testid="logo-image"
    height="80"
    src="/pubky-arena-logo.svg"
    width="200"
  />
</a>
`;

exports[`Logo - Snapshots > matches snapshot for default Logo 1`] = `
<a
  class="cursor-pointer hover:text-brand/80 transition-colors text-brand text-sm flex items-center min-h-[36px] min-w-[184px]"
  data-cy="header-logo"
  href="/home"
>
  <img
    alt="Pubky Arena"
    class="-mt-1 h-[36px] w-[184px]"
    data-testid="logo-image"
    height="36"
    src="/pubky-arena-logo.svg"
    width="184"
  />
</a>
`;
